syntax = "proto3";

package cn.gdrfgdrf.connectComputer.Protobuf.Action.Computer;

option java_package = "cn.gdrfgdrf.Protobuf.Action.Computer";
option java_outer_classname = "ComputerSuccessProto";

message RegisterComputerSuccessPacket {
    int32 id = 1;
}

message ComputerIsControlledPacket {
}